--- a/css/main.styl
+++ b/css/main.styl
@@ -1,9 +1,9 @@
 /*----------------------------------------
 [Master Stylesheet]
 
-Project:	Unitok HTML Template
+Project:	Unifund HTML Template
 Version:	1.0.1
-Primary use:	Unitok HTML Template
+Primary use:	Unifund HTML Template
 ----------------------------------------*/
 
 /*----------------------------------------
