--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,9 @@
 /*----------------------------------------
 [Master Stylesheet]
 
-Project:	Unitok HTML Template
+Project:	Unifund HTML Template
 Version:	1.0.1
-Primary use:	Unitok HTML Template
+Primary use:	Unifund HTML Template
 ----------------------------------------*/
 /*----------------------------------------
 [Table of contents]
@@ -1829,6 +1829,12 @@ body::-webkit-scrollbar-thumb {
 }
 .home__title b {
   font-weight: 500;
+    background-image: linear-gradient( 
+90deg
+ , rgb(0, 244, 255) 0%, rgba(0, 153, 243, 0.8) 100%);
+    color: transparent !important;
+    -webkit-background-clip: text;
+    background-clip: text; 
 }
 .home__title span {
   color: #6164ff;
