--- a/css/main.styl
+++ b/css/main.styl
@@ -42,12 +42,12 @@ Primary use:	Unifund HTML Template
 31. Select2
 32. Scrollbar-track
 ----------------------------------------*/
-$white = #fff
+$white = #16151a
 $black = #000
-$grey = #bdbdbd
+$grey = #8a8a8c
 
-$bg = #222227
-$bg2 = #16151a
+$bg = #e0e0e3
+$bg2 = #fafafc
 
 $mainclr = #6164ff
 
