--- a/css/main.css
+++ b/css/main.css
@@ -396,14 +396,15 @@ body::-webkit-scrollbar-thumb {
 .header__search input {
   width: calc(100% - 30px);
   height: 40px;
-  background-color: #e0e0e3;
+  background-color: rgba(255, 255, 255, .9);
   color: #16151a;
   font-size: 14px;
-  border-radius: 12px;
+  border-radius: 15px;
   border: none;
   padding: 0 45px 0 20px;
   font-family: 'Montserrat', sans-serif;
   font-weight: 400;
+  box-shadow: inset 0 0 1px rgb(0 0 0 / 70%);
 }
 .header__search input:focus {
   border-color: #16151a;
@@ -1481,7 +1482,6 @@ body::-webkit-scrollbar-thumb {
   border-radius: 16px;
   background-color: #fafafc;
   border: 1px solid #e0e0e3;
-  box-shadow: 0 0 10px rgb(0 0 0 / 10%);
 }
 .paginator__pages {
   display: none;
