--- a/css/main.css
+++ b/css/main.css
@@ -2025,7 +2025,7 @@ body::-webkit-scrollbar-thumb {
 .hero__text {
   position: relative;
   z-index: 2;
-  color: #5a5a5c;
+  color: #b1b1b2;
   font-size: 16px;
   line-height: 28px;
   margin-bottom: 0;
